--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,6 @@
-{{page-title "Sales"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container-fluid">
+    <Nav/>
+    <div class="body">
+        {{outlet}}
+    </div>
+</div>
