--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,6 +1,6 @@
-{{page-title "Home"}}
+
 <h3>
     This is home page..
 </h3>
  <img src="assets/images/teaching-tomster.jpg" class="img-thumbnail" alt="Cinque Terre" /> 
-{{outlet}}
+ <h1>The number is {{this.model}}</h1>
