--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,14 +7,15 @@
   </div>
 </div>
 
-<h1>{{@model.title}}</h1>
+{{!-- <h1>{{@model.title}}</h1>
 <div class="container-fluid">
   <ul class="list-group">
-    {{!-- <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental @rental={{@model}}/></li>
+    <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental @rental={{@model}}/></li>
     <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental /></li>
-    <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental /></li> --}}
+    <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental /></li>
     {{#each @model as |rental|}}
       <li class="list-group-item text-center p-5 mb-2 list-group-item-action"><Rental @rental={{rental}} /></li>
     {{/each}}
   </ul>
-</div>
+</div> --}}
+<Rentals @rentals={{@model}} />
