changes due to lint intendation

--- a/app/components/rental.hbs
+++ b/app/components/rental.hbs
@@ -9,8 +9,8 @@
   </div>
   <div class="col-md-6">
     <div class="details">
-        <h3 class="font-weight-bold">
-          <LinkTo @route="rental" @model={{@rental}} class="text-dark" style="text-decoration:none;">
+        <h3 class="font-weight-bold text-decoration-none">
+          <LinkTo @route="rental" @model={{@rental}} class="text-dark" id="dec">
             {{@rental.title}}
           </LinkTo>
         </h3>
