--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -6,14 +6,12 @@
   </a>
 </div> --}}
 
-<article class="rental detailed">
+<article class="rental detailed text-center">
   <br><br>
-  <center>
     <Rental::Images
         src={{@rental.image}}
         alt="A picture of {{@rental.title}}"
     />
-  </center>
   <br><br>
   <div class="details container border text-center">
     
