--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -37,3 +37,10 @@ span{
   color:green;
   font-weight: bolder;
 }
+.search{
+  font-size:30px;
+  color:gray;
+}
+#dec{
+  text-decoration: none;
+}
