an updated commit message

--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -20,6 +20,7 @@
             @text="Check out {{@rental.title}} on Super Rentals!"
             @hashtags="vacation,travel,authentic,blessed,superrentals"
             @via="emberjs"
+            @check={{true}}
         >
             Share on Twitter
         </ShareButton>
