--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -21,6 +21,7 @@
             @hashtags="vacation,travel,authentic,blessed,superrentals"
             @via="emberjs"
             @check={{true}}
+            @go="checking..."
         >
             Share on Twitter
         </ShareButton>
