--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -19,3 +19,9 @@
   </ul>
 </div> --}}
 <Rentals @rentals={{@model}} />
+<SenderMessage/>
+<RecievedMessage/>
+<h1>
+  newmessage
+</h1>
+<Samplemessage />
