--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -4,4 +4,7 @@
 </h3>
  <img src="assets/images/teaching-tomster.jpg" class="img-thumbnail" alt="Cinque Terre" /> 
  <h1>The number is {{this.model}}</h1>
+ <div {{on "click" allowedKeys="any"}}>
+  click me with any key pressed
+</div>
 
