--- a/app/components/slidebar.hbs
+++ b/app/components/slidebar.hbs
@@ -1,10 +1,4 @@
 <form>
-  <input {{autofocus}}>
+  <label for="auto">Input[Autofocus]:</label>
+  <input id="auto" {{autofocus}}>
 </form>
-<p class="help-icon" {{on "click" this.showHelp}}>?</p>
-
-{{#if this.showingHelp}}
-  <Modal @clickedOutside={{this.hideHelp}}>
-    Here's some interesting facts about the sidebar that you can learn.
-  </Modal>
-{{/if}}
